# options-envs

./: LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: adding_environment.md  index.md  versioning.md
docs/envs/: index.md  pinball.md
examples/pinball/: random_agent.py  render.py
options_envs/: __init__.py  registration.py
options_envs/envs/pinball/: __init__.py  ball.py  config.py  env.py  obstacle.py  registration.py  render.py  tasks.py
options_envs/wrappers/: __init__.py  option_info.py
tests/: test_pinball.py  test_registration.py
